force-app/main/default/objects/simpli_lv__List_View_Org_Wide_Setting__mdt/simpli_lv__List_View_Org_Wide_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Holds settings which are implemented for all list views regardless of profile or individual settings.</description>
    <label>List View Org Wide Setting</label>
    <pluralLabel>List View Org Wide Setting</pluralLabel>
</CustomObject>