force-app/main/default/objects/simpli_lv__List_View_Org_Wide_Setting__mdt/fields/simpli_lv__Description__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>