force-app/main/default/objects/simpli_lv__List_View_Org_Wide_Setting__mdt/fields/simpli_lv__Value__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Value__c</fullName>
    <label>Value</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>