force-app/main/default/objects/simpli_lv__List_View_Org_Wide_Setting__mdt/listViews/simpli_lv__All.listView-meta.xml
<ListView>
    <fullName>simpli_lv__All</fullName>
    <columns>MasterLabel</columns>
    <columns>simpli_lv__Description__c</columns>
    <columns>simpli_lv__User_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>